// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "categories": [],
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=110&ccb=1-7&_nc_sid=136b72&_nc_ohc=1BwdynYvBPkQ7kNvgGLfETp&_nc_oc=AdkwuZIOnFTbk3I7afTKTG1Y24wA-UuhcYr0n9h4ZxCFntUzHEHLbU_E2qgT8ccBkSErM6J-xwBqUPQRwjrFDWLc&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&oh=00_AYG--KDXOOWQnf6M4UOrL3ijmXai-Y-yarGjhvNhR9KQLg&oe=681611FA",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "categories": [],
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=109&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=CUtBHBcSvkwQ7kNvgF1RzCF&_nc_oc=Adl0ekulQycJe3WNVmDmyru0Sa0najIK73ywHl7AgZBJT96yEC48Gdp3b5uJm4-wHg5w8voww2SucrbtdpG-4tkI&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=V2F7xVr1nGnVHwX8KQzlwA&oh=00_AYFSk_RvaMxBVGmRk4I-e7zJFSr3Ccneh1w4Wj29Gi2hVg&oe=67F47DCB",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=lBA4W9u9D90Q7kNvgGcwYHA&_nc_oc=AdkiOqEJDmcUnPD_t5H0YrNwVcKS-SdQzNd09juXIGMmIR0TzHkY5xtrUdsTxlBmDjklitFWU1aLWEilA4W6zUUg&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=V2F7xVr1nGnVHwX8KQzlwA&oh=00_AYHSvu3-N10ju6FWOWe2sv00GNUsx6qe93c9-qRZE9nnmw&oe=67F4622B",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=3qSYYj5rw9sQ7kNvgHZfbqk&_nc_oc=AdkRcJP8GGtN6e19WwAgkJZjyVRfCq0V7Wr7BBlc48Z8JCek6kouwIGGb_95lAYvmvdQ0MtB7NY7jZQ0b7_M3qVt&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=V2F7xVr1nGnVHwX8KQzlwA&oh=00_AYF6m8bJUe1hod0a7Y_YyFj8Lz0XA1n3Kofxyf7OCn1iRA&oe=67F48282",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/439064200_1017561226405063_8213471074013536032_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=109&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=9uxGoyxnuAQQ7kNvgFlLc-P&_nc_oc=AdkZ2n5OkCQoxBZc1BkJFt6xiJIKx-sf8cJtyciHJI9jRBgYFk2Eo89L86KBjsGZ99lXFwZRamwpBxGuTSN2mgM0&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=V2F7xVr1nGnVHwX8KQzlwA&oh=00_AYERx3dl6q8Jc5RHQ_Tk2hmYudds1yeiZPB3ik6O_544wg&oe=67F46183",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=hhcKOPPcsXsQ7kNvgE7mcQ2&_nc_oc=AdmOYnx2JxZ7ct4ex77OUBfcvVv68EWIen3YbOI8hM4mSzzntG0S9LTPFHBJY7VnGrmYCnfdnh9TZzYvIxtbC2fo&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=tt8QbVfBQaUYzXL2E0cfow&oh=00_AYFsctAcPCjbzFotmnH9nhriuDoNhS6dmSmTxGrmxAR3Ig&oe=67F45C6D",
    "url": "https://www.facebook.com/photo/?fbid=10160954790708641&set=gm.602005851971871",
  },
  "siblingEvents": [],
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "categories": [
    {
      "label": "Religion",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1763934757268181%5D%7D",
    },
  ],
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM MDT",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Deerfoot",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/460987627_944177641081940_5270929113802053218_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=6_4Ericq7OgQ7kNvgGqhW4Y&_nc_oc=AdmHaK1dalJDU__V24mCbetJykOvNixK1iPNkh29O1M1INR_auEeuVQSyr66WVJ7RC27jnvjT7W5mc2VYoT-m3Y2&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=yinho4me4PVgi2KmpMJg3Q&oh=00_AYGHxN7iXBkJAtmNaYuh45EqM-j4qn_oLXXPrD-pXK9c4g&oe=67F454E4",
      },
      "type": "User",
      "url": "https://www.facebook.com/facdeerfoot",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Joining Jesus in the renewal of all things! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Deerfoot",
    "type": "PLACE",
    "url": "https://facebook.com/facdeerfoot",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "parentEvent": {
    "id": "1137956700212933",
  },
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/481055432_1056019033231133_4786716278309143615_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=Fnd3Pv_xvy0Q7kNvgGg5luk&_nc_oc=AdkWORkOMTHv7RL_P_3dJBB6vW-GWAMEBFN3mqumLGepJauPSPR54iT-8BLKIsFQ9R_P36Wl6M0V0qlUphacvUZ2&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=2wFLk5_yjAfg-veaJQQ2zg&oh=00_AYHDfoWp10NWIqwUK-vwWXp1sfyjS6UfKz0Fi86ceg3hWw&oe=67F46914",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "siblingEvents": [
    {
      "endTimestamp": 1681065000,
      "id": "1137956703546266",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681060500,
    },
    {
      "endTimestamp": 1681057800,
      "id": "1137956710212932",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681053300,
    },
    {
      "endTimestamp": 1681004700,
      "id": "1137956706879599",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681000200,
    },
  ],
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "categories": [
    {
      "label": "Wellness",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1712245629067288%5D%7D",
    },
  ],
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM MDT",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=75d36f&_nc_ohc=N2sp8WNyvXAQ7kNvgHMlq_b&_nc_oc=AdmAr5X1VdZexCPMuultzHDJVq5zGuS005WCjDU5WZgQkhpxOxWZrKo_YMt9_rjduXoPKGUdXdflF2EbZKRP8nA3&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=FyOdqNaHMV_bkl44Y2ZBHQ&oh=00_AYGnUUHV7eRPt2nxIR2U3ZgO_veZtQkb_wKSwhYFc9AWNA&oe=67F45CB1",
    "url": "https://www.facebook.com/photo/?fbid=10167524860335261&set=gm.252144523936238",
  },
  "siblingEvents": [],
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "categories": [
    {
      "label": "Shopping",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1759906074034918%5D%7D",
    },
  ],
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM MDT",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/343412725_1217737712204297_6274770509266232269_n.jpg?stp=c50.34.938.938a_cp0_dst-jpg_s74x74_tt6&_nc_cat=111&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=DRc_Hf0Z5u4Q7kNvgGVIYeX&_nc_oc=Adld_eWoI06jV8rI9A0Et0pYe6kB8h_nxfNr93hdKTmsCqidhxKYtnEcfEd0a6dZr1B34NJaDwsdY4xAQsnzK-rJ&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=mHA9NBDdpIChH2OLGWn-eA&oh=00_AYEvcocCQx7GHZCyQf8v9ZZ0jOLdAPcGThGWeFh_vSrUOg&oe=67F47DF4",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/472570967_1152279459799070_954455182245359149_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=CuHA6jyZQOYQ7kNvgG3WefK&_nc_oc=AdkYlKkXZKVlI6XtBW210Ui-mdm9YUTeuiJK9ek4YOjmeLVhl_VLCZL6-WfRew9DVQdALjpnAsYwt_yhevpR_y4e&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=H8ueXL59YU6lgmaD69Tdog&oh=00_AYGOuBrvrPwHCjNMKvEniyXe1HOBeIcKI9DW9STTzU2osw&oe=67F47654",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "siblingEvents": [],
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5939,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "categories": [],
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=110&ccb=1-7&_nc_sid=136b72&_nc_ohc=1BwdynYvBPkQ7kNvgGLfETp&_nc_oc=AdkwuZIOnFTbk3I7afTKTG1Y24wA-UuhcYr0n9h4ZxCFntUzHEHLbU_E2qgT8ccBkSErM6J-xwBqUPQRwjrFDWLc&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&oh=00_AYG--KDXOOWQnf6M4UOrL3ijmXai-Y-yarGjhvNhR9KQLg&oe=681611FA",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "categories": [
    {
      "label": "Party",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B183019258855149%5D%7D",
    },
  ],
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM MDT",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=3fhOL_F0BJYQ7kNvgGFmOkv&_nc_oc=AdmGr9PFwuYsbRfWJkTeEPUmhLWl3te9fSgc8WxMvXqiyG0bPvQ6kbhes3ekIsTB8IRClGE2WmWRBhWEySccc56j&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=8B--XKVD5GWcuUoEJR9IAQ&oh=00_AYGrb7evBBcbLe-8ytVsQYrgmTAWKZgjuO9mvFXwXxdMnA&oe=67F478A6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=AU3vP_vEWoYQ7kNvgFfbdrE&_nc_oc=AdnpGa_aIJBpp_5P9HXUcy8YjuUfpSlzDs0Op80FC9PBrASOnAPDtIgIEuU6XwDaIxEvE9z6EeKxNOh0Sm9AkaVl&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=8B--XKVD5GWcuUoEJR9IAQ&oh=00_AYGpQYzRe1-53QnGVUkmRN06FqYiB6b32zo7I6u2GhlCIg&oe=67F48827",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/483866251_1107783254695132_4478007887358984133_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=2Zp--_qQUi0Q7kNvgHOdgXt&_nc_oc=AdkhayeOn4jVq8bkbP2mJzcz1i9VF3Er2to2JD2fdFSvp8dd_Mndw-drrxhYhgj5qOLWJZ2L83iyuS_M_uRDtjjd&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=t1Mfn3MpTsm5ylm6JUvdOw&oh=00_AYH8s6fO-5R6jFV4kJICfD8Br91r80EYCT3GEvv3EV-oJA&oe=67F464E8",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "siblingEvents": [],
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "categories": [
    {
      "label": "Causes",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1284277608291920%5D%7D",
    },
  ],
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=111&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=PwodFXL7tpkQ7kNvgGbdk3H&_nc_oc=Adl868_fFe1vsu6QcDRPtXfXx6VoqyE1httXOgAeLuWuIIqaJSqJdEPMAMioca7vFeYQf2il6bZyF5gFKUrdhoU9&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=yaVwnVlY_K25HXNs7lFQPg&oh=00_AYGdsNwuIYNE8dimQBAfYzuKhpTW-qFQC5v3Q71LmoiPYg&oe=67F453D1",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=-fbd_Gl1fikQ7kNvgFg7SMJ&_nc_oc=AdmC9KEhzYbR1sPPGHY858pYGhqog_m_zUHTXVTSgaGq1D1d23UWwBHIjiPKc-2ZtfrJB1p8teHWKRqMuGBANFE_&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=yaVwnVlY_K25HXNs7lFQPg&oh=00_AYH4q34nYdwbZYy9dLIEv5iXxroF1FDF9yusovwe7nVreQ&oe=67F4773C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=04xDEPunUMEQ7kNvgErtHIq&_nc_oc=Adn59tBFlUv3veeZv1EhFRvjsaC2azhK93ZA5rClWFF6bw9soWp9f7DErp8qNe4_bWRk6VNwSbWqtuEu5XFeSlhH&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=yaVwnVlY_K25HXNs7lFQPg&oh=00_AYGK1jbOls3X6CTMIOfm5UOFNwNS_CaBzz0f9koD-XCdIg&oe=67F45D72",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/473965764_1047560367408769_1188670290210731717_n.jpg?stp=c293.0.1414.1414a_cp0_dst-jpg_s74x74_tt6&_nc_cat=100&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=WuGDGugjHCQQ7kNvgGIRJKz&_nc_oc=AdncOdOujimgATfzouuTFxiU4rmwIUs0WWEAXplUOppk2tDHYl-Ax1pX1B94XATkT2WKaKJqwmkPzaf5qGk0SEcC&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=yaVwnVlY_K25HXNs7lFQPg&oh=00_AYHtfm5kxU9maudZjLY2n0RMDmaZwLJgVX6hAqs_b60bfg&oe=67F463FA",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=282d23&_nc_ohc=-VXX72wKevMQ7kNvgES91oA&_nc_oc=AdkpDqP7104s1DXZLqFyW09SduLJgkEHzOdbTmu_eZElfn--VtZ4-xMHrruD4CgpODsB3FOR43QR_4D7iRAZgGfq&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=hpvG5SAj0CzYErSVWx0fag&oh=00_AYEJtKos0GVydlcNv2TlTnZmmST3ZB7DiuBV-ndXcHDDng&oe=67F46A2B",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "categories": [
    {
      "label": "Sports",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B607999416057365%5D%7D",
    },
  ],
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/448627833_865600602273587_4050110030248245393_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=8KTjVe07mKUQ7kNvgEXUzG-&_nc_oc=Adk7x075UR7_4rekBgjetdyJjOqVehwE6lNfqmWmD0229WiecWOiQThNFQ0pL8Nb2WsDDvyI6rHqf-gHF25WMwXX&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=nPjsuGgp63cBsUmG3DONGg&oh=00_AYFa3vxTCSxHi5N4GusXoItKQh2XQnqpSN3SUrRxsGyTkg&oe=67F46A69",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=3qSYYj5rw9sQ7kNvgHZfbqk&_nc_oc=AdkRcJP8GGtN6e19WwAgkJZjyVRfCq0V7Wr7BBlc48Z8JCek6kouwIGGb_95lAYvmvdQ0MtB7NY7jZQ0b7_M3qVt&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&_nc_gid=nPjsuGgp63cBsUmG3DONGg&oh=00_AYGaYm5uUBqNxEKDb2CG7p80Kv7KQI1rmyKs2Os05kC1TA&oe=67F48282",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t39.30808-6/473081369_1630277110957063_1481524804345515679_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=LT3de8An608Q7kNvgGwzhoB&_nc_oc=AdnvoqwE6-6azAFH06hLCkJPXesvKfQj8kXamNBTJJFC0cJteHGTjqvRM483RtjmFaIs3dw3YsU1G3CwuIufzNhy&_nc_zt=23&_nc_ht=scontent.fprg1-1.fna&_nc_gid=e7R2_1Ufi3Lc9pvD12jrPQ&oh=00_AYHBEQCGUbojTJn5IF_jLz8pcfJtTye4Z0p4i9hl-9A-Zg&oe=67F482F6",
    "url": "https://www.facebook.com/photo/?fbid=1273089803342464&set=gm.977705193657933",
  },
  "siblingEvents": [],
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "categories": [],
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fprg1-1.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=110&ccb=1-7&_nc_sid=136b72&_nc_ohc=1BwdynYvBPkQ7kNvgGLfETp&_nc_oc=AdkwuZIOnFTbk3I7afTKTG1Y24wA-UuhcYr0n9h4ZxCFntUzHEHLbU_E2qgT8ccBkSErM6J-xwBqUPQRwjrFDWLc&_nc_zt=24&_nc_ht=scontent.fprg1-1.fna&oh=00_AYG--KDXOOWQnf6M4UOrL3ijmXai-Y-yarGjhvNhR9KQLg&oe=681611FA",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGj6B1rxxo3QFADeCQUvdfXYSdaSt4bVkxQ5VLTSr2YfkxooN65p4ZhmazVPc5iUl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;
